# qemu_stm32f1

./: .gitignore  README.rst  doit.mk  gb.mk  meson.build
configs/devices/arm-softmmu/: default.mak
configs/devices/ricky-softmmu/: default.mak
configs/targets/: ricky-softmmu.mak
disas/: arm.c  meson.build
hw/: Kconfig  meson.build
hw/ricky/: Kconfig  meson.build  ricky_board.c  ricky_board.h  ricky_soc.c  ricky_soc.h  ricky_soc_gpio.c  ricky_soc_gpio.h  ricky_soc_spi.c  ricky_soc_spi.h  ricky_soc_uasrt.h  ricky_soc_usart.c
hw/ssi/: Kconfig  m25p80.c  meson.build  stm32f2xx_spi.c
include/hw/ssi/: stm32f2xx_spi.h
